<?xml version="1.0"?>
<package format="2">
  <name>navigation_pkg</name>
  <version>0.0.0</version>
  <description>The navigation_pkg package</description>
  <maintainer email="handleandwheel@todo.todo">handleandwheel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>

  </export>
</package>